# sun_scripts

./: CMakeLists.txt  README.md  config.json
include/: utils.h
py/: draw.py  draw_full.py  fit_all.py  kmeans_cluster.py  make_db.py  modify_db.py  optimize.py  parallel_fit_all.py  plot_tsne.py  utils.py  view_db.py
src/: README.md  fitcorr.cc  mult.cc  mult_sim.cc  pyproject.toml  remove_daughter.cc  run_all.cc  ss.cc  ss_sim.cc  ss_sim_mult1.cc  tas.cc  tas_sim.cc  tas_sim_mult1.cc  tas_ss_2d.cc  write_to_csv.cc
src/gamma_scripts/: draw_chi2.py  draw_cluster.py  fit_all.py  optimize.py  parallel_fit_all.py  pipeline.sh  problem.py  utils.py
