[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~= 61.0.0",
    "wheel ~= 0.37.1",
]
[project]
name = "gamma_scripts"
version = "0.0.2"
dependencies = [
    "pandas",
    'importlib-metadata; python_version>"3.7"',
]
authors = [
  { name="Kirby Hermansen", email="khermansen@proton.me" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kirbyherm/sun_scripts"
"Bug Tracker" = "https://github.com/kirbyherm/sun_scripts/issues"

